[tool.poetry]
name = "pob"
version = "v0.1.0"
description = "Creat a OCI image without docker or something else for python"
readme = "README.md"
homepage = "https://github.com/BilalAlpaslan/pob"
authors = ["Bilal Alpaslan <m.bilal.alpaslan@gmail.com>"]
license = "LICENSE"
packages = [{include = "pob/*"}]

[tool.poetry.dependencies]
python = ">=3.7"
typer = ">=0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"